# tutorial-new-tutorial-group-1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dataset_strategy_comparison.md  pyproject.toml  try_few_shot.ipynb  tutorial.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  render-notebook.yml
data/: generate_pv_masks.py  load_rid_data.py
docs/: _config.yml  index.md  installation.md  memo.md  tutorial_few_shot_learning.html
notebooks/: class_template.ipynb  fewshot_approaches_setup.ipynb  rid_roof_segments.ipynb  try_few_shot.ipynb  tutorial_few_shot_learning.ipynb
presentation/: .RData  .Rhistory  dimmery.scss  refs.bib  tutorial-new-tutorial-group-1-NARRATIVE.qmd  tutorial-new-tutorial-group-1.html  tutorial-new-tutorial-group-1.qmd
src/few_shot_utils/: __init__.py  data.py  evaluate.py  models.py  train.py
