[build-system]
requires = ["setuptools >= 69.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "few_shot_utils"
version = "0.0.1"
description = "DL Tutorial 2025: Few-shot learning tutorial on satellite imagery for rooftop detection."
readme = "README.md"
authors = [
    {name = "Tutorial Group 1"},
]
maintainers = [{name = "Tutorial Group 1"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing"
]
requires-python = ">=3.11"
dependencies = [
    'numpy>=1.24.0',
    'pandas>=2.1.0',
    'matplotlib>=3.8.0',
    'Pillow>=10.0.0',
    'scikit-learn>=1.3.0',
    'tqdm>=4.66.0',
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.2",
    "ipykernel==6.29.3",
    "nbformat>=5.9.0",
    "pre-commit==3.6.0",
]
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.urls]
Documentation = "https://elenaivadreyer.github.io/tutorial-group-1/"
Source = "https://github.com/hertie-data-science-lab/tutorial-new-tutorial-group-1"
Tracker = "https://github.com/hertie-data-science-lab/tutorial-new-tutorial-group-1/issues"

#Global ruff configuration
[tool.ruff]

#global exlusions as defined in original template version
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".eggs",
    ".cache",
    ".tox",
    "venv",
    ".venv",
    ".env",
    "_build",
    "buck-out",
    "build",
    "__pycache__",
    "dist",
    "nssm",
    "obj",
    "out",
    "packages",
    "pywin32",
    "swagger_client"
]


# Line length configuration
line-length = 120

# Ruff linting configuration
[tool.ruff.lint]
select = [
    "E",      # Pycodestyle errors (PEP8 style)
    "F",      # Pyflakes (code errors and issues)
    "W",      # Pycodestyle warnings
    "I",      # Import sorting (isort replacement)
    "D",      # Pydocstyle (PEP257 docstring conventions)
    "ANN",    # flake8-annotations (function type annotations)
    "UP",     # Pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (likely bugs)
    "S",      # Security checks (bandit replacement)
    "N",      # Naming conventions (PEP8)
    "PL",     # Pylint rules
]

ignore = [
    # Docstring requirements - relaxed for flexibility
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",

    # Docstring formatting - avoid conflicts
    "D211",   # Conflicts with D203
    "D212",   # Conflicts with D213

    # Style preferences
    "COM812", # Conflicts with formatter
    "D203",   # Conflicts with formatter
]

# Allow underscore-prefixed unused variables
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Per-file exceptions
[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["S"]  # Disable security checks in scripts

# Jupyter notebooks - relaxed rules for exploratory work
"*.ipynb" = [
    "T201",    # Allow print statements
    "ANN",     # No annotation requirements
    "E501",    # Allow long lines
    "F401",    # Allow unused imports
    "I001",    # Relaxed import sorting
    "PLC0415", # Allow imports outside top-level
    "PLR0913", # Allow many function arguments
    "S105",    # Allow hardcoded passwords (often placeholder values in tutorials)
]

# Training/evaluation modules
"src/few_shot_utils/train.py" = ["T201", "PLR0913"]
"src/few_shot_utils/evaluate.py" = ["T201"]
"src/few_shot_utils/models.py" = ["PLC0415"]

# Import sorting configuration
[tool.ruff.lint.isort]
split-on-trailing-comma = true

# Pylint-compatible settings
[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-locals = 15
max-returns = 6
max-statements = 50

# Ruff formatter (Black replacement)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"